Changed theme to risotto

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://yxz.is-a.dev/'
 languageCode = 'en-us'
 title = 'YXZ blog'
-theme = 'github-style'
+theme = 'risotto'
 
 [params]
     author = 'YXZ'
